test_cases/bad/struct_multiple_definitions.lat
struct foo {
    int x;
}

struct foo {
    int y;
}

int main() {
    return 0;
}

